[gd_scene load_steps=10 format=3 uid="uid://b4pavxhcdhhj"]

[ext_resource type="Script" uid="uid://b57lphxxlwf0t" path="res://scripts/main_game.gd" id="1_3bnjd"]
[ext_resource type="Texture2D" uid="uid://ctx32w2mkv55a" path="res://assests/tileset/menu game.png" id="3_3bnjd"]
[ext_resource type="FontFile" uid="uid://cgl8w7k8kdixk" path="res://assests/BoldPixels.ttf" id="3_n7npl"]
[ext_resource type="AudioStream" uid="uid://bk4bv1ftka6xq" path="res://assests/music/Backsound game/BacksoundGame_1.mp3" id="3_viahy"]
[ext_resource type="Texture2D" uid="uid://ck0562rvlxdiy" path="res://assests/tileset/button.png" id="5_x4sgh"]

[sub_resource type="Animation" id="Animation_1rp33"]
resource_name = "main"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(572, -201), Vector2(572, -205.17)]
}

[sub_resource type="Animation" id="Animation_n7npl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(572, -201)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x4sgh"]
_data = {
&"RESET": SubResource("Animation_n7npl"),
&"main": SubResource("Animation_1rp33")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kle4b"]
texture = ExtResource("5_x4sgh")
region_rect = Rect2(13.856617, 25.832815, 36.156376, 15.270929)
modulate_color = Color(0.93333334, 1, 1, 1)

[node name="mainGame" type="Control"]
layout_mode = 3
anchor_right = 0.026
anchor_bottom = 0.033
offset_left = 330.0
offset_top = 329.0
offset_right = 296.72
offset_bottom = 305.24
pivot_offset = Vector2(359, 54)
size_flags_horizontal = 4
script = ExtResource("1_3bnjd")

[node name="name" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.76862746)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 182.0
offset_top = 365.0
offset_right = 515.0
offset_bottom = 388.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8901961)
theme_override_fonts/font = ExtResource("3_n7npl")
theme_override_font_sizes/font_size = 22
text = "TechCode Team Production (2025) "

[node name="music_bg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_viahy")
autoplay = true

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(572, -201)
scale = Vector2(1.615942, 1.615942)
texture = ExtResource("3_3bnjd")
region_enabled = true
region_rect = Rect2(2.9883041, 463.22733, 276.85736, 138.50388)

[node name="fly" type="AnimationPlayer" parent="logo"]
libraries = {
&"": SubResource("AnimationLibrary_x4sgh")
}
autoplay = "main"

[node name="settings" type="Button" parent="."]
layout_mode = 0
offset_left = -153.33011
offset_top = -77.514595
offset_right = 37.66989
offset_bottom = -10.514595
rotation = 0.06098294
theme_override_colors/font_hover_color = Color(0.25882354, 0.14117648, 0, 1)
theme_override_fonts/font = ExtResource("3_n7npl")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxTexture_kle4b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kle4b")
theme_override_styles/hover = SubResource("StyleBoxTexture_kle4b")
text = "Settings
"

[node name="credits" type="Button" parent="."]
layout_mode = 0
offset_left = -164.33011
offset_top = 37.485405
offset_right = 26.669891
offset_bottom = 104.485405
rotation = -0.01343144
theme_override_colors/font_hover_color = Color(0.6313726, 0.3372549, 0, 1)
theme_override_fonts/font = ExtResource("3_n7npl")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxTexture_kle4b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kle4b")
theme_override_styles/hover = SubResource("StyleBoxTexture_kle4b")
text = "Credits
"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = -166.33011
offset_top = 131.48541
offset_right = 24.669891
offset_bottom = 198.48541
rotation = 0.11472756
theme_override_colors/font_hover_color = Color(0.6313726, 0.3372549, 0, 1)
theme_override_fonts/font = ExtResource("3_n7npl")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxTexture_kle4b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kle4b")
theme_override_styles/hover = SubResource("StyleBoxTexture_kle4b")
text = "Exit"

[node name="play" type="Button" parent="."]
layout_mode = 0
offset_left = -163.33011
offset_top = -178.51459
offset_right = 27.669891
offset_bottom = -111.51459
rotation = -0.06541526
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_colors/font_hover_color = Color(0.6313726, 0.3372549, 0, 1)
theme_override_fonts/font = ExtResource("3_n7npl")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxTexture_kle4b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kle4b")
theme_override_styles/hover = SubResource("StyleBoxTexture_kle4b")
text = "Play"

[connection signal="pressed" from="settings" to="." method="_on_play_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_play_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
